# BrainTumorAIAssistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
demo/: README.md
docs/: LOCAL_RAG_TECHNICAL_GUIDE.md
frontend/: streamlit_app.py
scripts/: probe_provider_compat.py  search_literature_candidates.py  sync_knowledge_base.py
src/bmagent_rag/: cli.py  config.py  literature.py  local_rag.py  manifest.py  provider_probe.py  qa_api.py  qa_config.py  qa_models.py  qa_prompts.py  qa_service.py  sync.py
tests/: conftest.py  test_frontend_smoke.py  test_literature_search.py  test_provider_probe.py  test_qa_api.py  test_qa_config.py  test_qa_models.py  test_qa_sessions.py  test_rag_kb.py  test_rag_resilience.py
